--- a/DelegateDI/DelegateDI.csproj
+++ b/DelegateDI/DelegateDI.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="34.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+    <PackageReference Include="Nethereum.ENS" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Util" Version="4.12.0" />
+    <PackageReference Include="Nethereum.Web3" Version="4.12.0" />
     <PackageReference Include="NodaTime" Version="3.1.6" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
