--- a/DelegateDI/DelegateDI.csproj
+++ b/DelegateDI/DelegateDI.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Nethereum.Util" Version="4.12.0" />
     <PackageReference Include="Nethereum.Web3" Version="4.12.0" />
     <PackageReference Include="NodaTime" Version="3.1.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
